--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     .center {
       margin: auto;
       width: 50%;
-      border: 3px solid green;
+      text-align: center;
       padding: 10px;
     }
   </style>
