--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 </head>
 <body>
   <h1 class="center">WebOS</h1>
-  <p>Error Occured :<br>In Library: Bootup.js,<br>Reason: Device not supported.</p>
   <style>
     .center {
-      margin: auto;
-      width: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
       text-align: center;
       padding: 10px;
     }
