--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
-<!DOCTYPE HTML>
-<head>
-  <title>WebOS</title>
-</head>
-<body>
-  <h1 class="center">WebOS</h1>
-  <style>
-    .center {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      text-align: center;
-      padding: 10px;
-    }
-  </style>
-  <script src="bootup.js"/>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>WebOS</title>
+  </head>
+  <body>
+    <h1 class="center">WebOS</h1>
+    <style>
+      .center {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        text-align: center;
+        padding: 10px;
+      }
+    </style>
+    <script src="bootup.js"/>
+  </body>
+</html>
