--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
   </head>
   <body>
     <h1 class="center">WebOS</h1>
-    <style>
-      .center {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        text-align: center;
-        padding: 10px;
-      }
-    </style>
+    <link rel="stylesheet", src="mainui.css"/>
     <script src="bootup.js"/>
   </body>
 </html>
