--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1 class="center">WebOS</h1>
-    <link rel="stylesheet", src="mainui.css"/>
+    <link rel="stylesheet", href="mainui.css"/>
     <script src="bootup.js"/>
   </body>
 </html>
