--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body>
     <h1 class="center">WebOS</h1>
     <link rel="stylesheet", href="mainui.css"/>
-    <script src="bootup.js"/>
+    <script src="https://adev531.github.io/WebOS/bootup.js"></script>
   </body>
 </html>
