--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1 class="center">WebOS</h1>
     <link rel="stylesheet", href="mainui.css"/>
     <script src="https://adev531.github.io/WebOS/bootup.js"></script>
+    <script src="https://adev531.github.io/WebOS/kernel.js"></script>
   </body>
 </html>
