--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>WebOS</title>
   </head>
   <body>
-    <h1 class="center">WebOS</h1>
+    <h1 class="center", id="bootlogo">WebOS</h1>
     <link rel="stylesheet", href="mainui.css"/>
     <script src="https://adev531.github.io/WebOS/bootup.js"></script>
   </body>
